--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -24,7 +24,7 @@ jobs:
       with:
         registry: 362756477240.dkr.ecr.eu-central-1.amazonaws.com
         username: AWS
-        password: ${{ aws ecr get-login-password --region ${{ secrets.AWS_REGION }} }}
+        password: $( aws ecr get-login-password --region ${{ secrets.AWS_REGION }} )
 #     - run: aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | docker login --username AWS --password-stdin 362756477240.dkr.ecr.eu-central-1.amazonaws.com
     - run: aws --version
     - run: npm -v
