--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -19,13 +19,18 @@ jobs:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ${{ secrets.AWS_REGION }}
-    - run: aws ecr get-login-password --region eu-central-1
-    - name: Login to AWS Elastic Container Registry
-      uses: docker/login-action@v1 
+    - name: Login to Amazon ECR
+      id: login-ecr
+      uses: aws-actions/amazon-ecr-login@v1
       with:
-        registry: 362756477240.dkr.ecr.eu-central-1.amazonaws.com
-        username: AWS
-        password: $( aws ecr get-login-password --region eu-central-1 )
+        registries: 362756477240.dkr.ecr.eu-central-1.amazonaws.com
+#     - run: aws ecr get-login-password --region eu-central-1
+#     - name: Login to AWS Elastic Container Registry
+#       uses: docker/login-action@v1 
+#       with:
+#         registry: 362756477240.dkr.ecr.eu-central-1.amazonaws.com
+#         username: AWS
+#         password: $( aws ecr get-login-password --region eu-central-1 )
 #     - run: aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | docker login --username AWS --password-stdin 362756477240.dkr.ecr.eu-central-1.amazonaws.com
     - run: aws --version
     - run: npm -v
