--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -23,7 +23,7 @@ jobs:
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
       with:
-        registries: ${{ AWS_ECR_REGITRY_ID }}
+        registries: ${{ secrets.AWS_ECR_REGITRY_ID }}
 #     - run: aws ecr get-login-password --region eu-central-1
 #     - name: Login to AWS Elastic Container Registry
 #       uses: docker/login-action@v1 
